
- When DDD creates a new dependent display, it copies the selection
  state from the originating display.  This way, you can easily unfold
  linked elements simply by clicking `Disp *' again and again.

- The `New Display' menu is maintained separately for each debugger
  type.  That is, you can have different menus for GDB, DBX, Perl,
  etc.  There are also suitable defaults for each of these.

- Anonymous unions are no longer prefixed by `='.

- `Examine Memory' also works for Solaris DBX.


Source exploration
------------------

- Double-clicking on a function call (that is, an identifier followed
  by a `(' character) will lead you to the function definition.

- The GDB `Open Source' dialog has a filter.

- You can easily toggle line numbers via the `Source' menu or the
  `Source' preferences.

- Dragging breakpoints works much better with scrolling.


Printing
--------

- Arc edges are printed as such.

- Graphs can be printed in color.

- You can select a file to print to via a file selection browser.


File Access
-----------

- The `filterFiles' resource allows you to turn off filtering files
  when opening executables, core dumps, or sources.  This is useful in
  environments with slow file access.


User Interface
--------------

- Insensitive items have a 3-D `emboss' look, making them more legible.

- `Flat' toolbar buttons keep their border after having been activated.

- Toolbar buttons appear in color when entered.  See the
  `activeButtonColorKey' resource for details.

- Using Motif 2.0, the `Insert' key toggles text insertion mode.

- The function keys F2-F9 are bound to frequently used commands:

	F2 Run
	F3 Run Again
	F4 Kill
	F5 Step		Shift+F5 Step Instruction
	F6 Next		Shift+F6 Next Instruction
	F7 Until
	F8 Finish
	F9 Continue	Shift+F9 Continue Without Signal

  The bindings from DDD 3.0 and earlier (Ctrl+E for Run, Ctrl+I for
  Step, etc.) are still available.

- You can configure the Ctrl+C (`Interrupt' vs. `Copy') and Ctrl+A